Migrate persistence to PostgreSQL
